--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,38 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clokwerk = "0.3.3"
-reqwest = { version = "0.10", features = ["blocking", "json"] }
 select = "0.5.0"
 scraper = "0.12.0"
+tgbot = "0.10.0"
+async-stream = "0.2"
+async-trait = "0.1"
+bytes = "0.5"
+derive_more = "0.99"
+futures-util = "0.3"
+http = "0.2"
+hyper = "0.13"
+log = "0.4"
+mime = "0.3"
+mime_guess = "2"
+reqwest = { version = ">= 0.10.1, < 0.11", default-features = false, features = ["blocking", "json", "socks", "rustls-tls", "stream"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+shellwords = "1"
+tokio = { version = "0.2", features = ["fs"] }
+tokio-util = { version = "0.3", features = ["codec"] }
+url = "2"
+dotenv = "0.15"
+env_logger = "0.7"
+
+[dev-dependencies]
+dotenv = "0.15"
+env_logger = "0.7"
+mockito = "0.23"
+regex = "1.3"
+tempfile = "3"
+tokio = {version = "0.2", features = ["fs", "macros"]}
+toml = "0.5"
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "nightly"]
